// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Displays error message if prepare errors present 1`] = `
"<h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl">Error</label></h1>
<div class="nhsuk-error-summary" tabindex="-1" role="alert" aria-labelledby="error-summary-title">
  <h2 class="nhsuk-error-summary__title" id="error-summary-title">Something went wrong while processing your request:</h2>
  <div class="nhsuk-error-summary__body">Unexpected response from server.</div>
</div>
<fieldset class="nhsuk-fieldset">
  <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m">Request Details</legend>
  <dl class="nhsuk-summary-list">
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Method</dt>
      <dd class="nhsuk-summary-list__value">POST</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">URL</dt>
      <dd class="nhsuk-summary-list__value">baseUrl/sign/upload-signatures</dd>
    </div>
  </dl>
  <details class="nhsuk-details nhsuk-expander">
    <summary class="nhsuk-details__summary"><span class="nhsuk-details__summary-text">Request Headers</span></summary>
    <div class="nhsuk-details__text">
      <div class="sc-egkSDF hcqWyj"><button class="nhsuk-button sc-ivxoEo krxZPo" aria-disabled="false" type="submit">Copy</button><a class="nhsuk-button sc-ivxoEo krxZPo" role="button" aria-disabled="false" draggable="false" href="data:text/xml;charset=utf-8,%7B%0A%20%20%22Accept%22%3A%20%22application%2Fjson%2C%20text%2Fplain%2C%20*%2F*%22%2C%0A%20%20%22Content-Type%22%3A%20%22application%2Fx-www-form-urlencoded%22%2C%0A%20%20%22nhsd-identity-authentication-method%22%3A%20%22N3_SMARTCARD%22%0A%7D" download="message">Download</a></div><pre class="sc-dntaoT cwTwjs">{
  "Accept": "application/json, text/plain, */*",
  "Content-Type": "application/x-www-form-urlencoded",
  "nhsd-identity-authentication-method": "N3_SMARTCARD"
}</pre>
    </div>
  </details>
</fieldset>
<fieldset class="nhsuk-fieldset">
  <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m">Response Details</legend>
  <dl class="nhsuk-summary-list">
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Status</dt>
      <dd class="nhsuk-summary-list__value">200 undefined</dd>
    </div>
  </dl>
  <details class="nhsuk-details nhsuk-expander">
    <summary class="nhsuk-details__summary"><span class="nhsuk-details__summary-text">Response Headers</span></summary>
    <div class="nhsuk-details__text">
      <div class="sc-egkSDF hcqWyj"><button class="nhsuk-button sc-ivxoEo krxZPo" aria-disabled="false" type="submit">Copy</button><a class="nhsuk-button sc-ivxoEo krxZPo" role="button" aria-disabled="false" draggable="false" href="data:text/xml;charset=utf-8,%7B%7D" download="message">Download</a></div><pre class="sc-dntaoT cwTwjs">{}</pre>
    </div>
  </details>
  <details class="nhsuk-details nhsuk-expander">
    <summary class="nhsuk-details__summary"><span class="nhsuk-details__summary-text">Response Body</span></summary>
    <div class="nhsuk-details__text">
      <div class="sc-egkSDF hcqWyj"><button class="nhsuk-button sc-ivxoEo krxZPo" aria-disabled="false" type="submit">Copy</button><a class="nhsuk-button sc-ivxoEo krxZPo" role="button" aria-disabled="false" draggable="false" href="data:text/xml;charset=utf-8,%7B%0A%20%20%22prepareErrors%22%3A%20%5B%0A%20%20%20%20%7B%0A%20%20%20%20%20%20%22resourceType%22%3A%20%22OperationOutcome%22%2C%0A%20%20%20%20%20%20%22issue%22%3A%20%5B%0A%20%20%20%20%20%20%20%20%7B%0A%20%20%20%20%20%20%20%20%20%20%22severity%22%3A%20%22fatal%22%2C%0A%20%20%20%20%20%20%20%20%20%20%22code%22%3A%20%22invalid%22%2C%0A%20%20%20%20%20%20%20%20%20%20%22diagnostics%22%3A%20%22Some%20error%20message%22%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%5D%0A%20%20%20%20%7D%0A%20%20%5D%0A%7D" download="message">Download</a></div><pre class="sc-dntaoT cwTwjs">{
  "prepareErrors": [
    {
      "resourceType": "OperationOutcome",
      "issue": [
        {
          "severity": "fatal",
          "code": "invalid",
          "diagnostics": "Some error message"
        }
      ]
    }
  ]
}</pre>
    </div>
  </details>
</fieldset>
<div class="sc-egkSDF hcqWyj"><button class="nhsuk-button nhsuk-button--secondary" aria-disabled="false" type="button">Back</button></div>"
`;

exports[`Displays error message if redirect URI not present 1`] = `
"<h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl">Error</label></h1>
<div class="nhsuk-error-summary" tabindex="-1" role="alert" aria-labelledby="error-summary-title">
  <h2 class="nhsuk-error-summary__title" id="error-summary-title">Something went wrong while processing your request:</h2>
  <div class="nhsuk-error-summary__body">Unexpected response from server.</div>
</div>
<fieldset class="nhsuk-fieldset">
  <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m">Request Details</legend>
  <dl class="nhsuk-summary-list">
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Method</dt>
      <dd class="nhsuk-summary-list__value">POST</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">URL</dt>
      <dd class="nhsuk-summary-list__value">baseUrl/sign/upload-signatures</dd>
    </div>
  </dl>
  <details class="nhsuk-details nhsuk-expander">
    <summary class="nhsuk-details__summary"><span class="nhsuk-details__summary-text">Request Headers</span></summary>
    <div class="nhsuk-details__text">
      <div class="sc-egkSDF hcqWyj"><button class="nhsuk-button sc-ivxoEo krxZPo" aria-disabled="false" type="submit">Copy</button><a class="nhsuk-button sc-ivxoEo krxZPo" role="button" aria-disabled="false" draggable="false" href="data:text/xml;charset=utf-8,%7B%0A%20%20%22Accept%22%3A%20%22application%2Fjson%2C%20text%2Fplain%2C%20*%2F*%22%2C%0A%20%20%22Content-Type%22%3A%20%22application%2Fx-www-form-urlencoded%22%2C%0A%20%20%22nhsd-identity-authentication-method%22%3A%20%22N3_SMARTCARD%22%0A%7D" download="message">Download</a></div><pre class="sc-dntaoT cwTwjs">{
  "Accept": "application/json, text/plain, */*",
  "Content-Type": "application/x-www-form-urlencoded",
  "nhsd-identity-authentication-method": "N3_SMARTCARD"
}</pre>
    </div>
  </details>
</fieldset>
<fieldset class="nhsuk-fieldset">
  <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m">Response Details</legend>
  <dl class="nhsuk-summary-list">
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Status</dt>
      <dd class="nhsuk-summary-list__value">400 undefined</dd>
    </div>
  </dl>
  <details class="nhsuk-details nhsuk-expander">
    <summary class="nhsuk-details__summary"><span class="nhsuk-details__summary-text">Response Headers</span></summary>
    <div class="nhsuk-details__text">
      <div class="sc-egkSDF hcqWyj"><button class="nhsuk-button sc-ivxoEo krxZPo" aria-disabled="false" type="submit">Copy</button><a class="nhsuk-button sc-ivxoEo krxZPo" role="button" aria-disabled="false" draggable="false" href="data:text/xml;charset=utf-8,%7B%7D" download="message">Download</a></div><pre class="sc-dntaoT cwTwjs">{}</pre>
    </div>
  </details>
  <details class="nhsuk-details nhsuk-expander">
    <summary class="nhsuk-details__summary"><span class="nhsuk-details__summary-text">Response Body</span></summary>
    <div class="nhsuk-details__text">
      <div class="sc-egkSDF hcqWyj"><button class="nhsuk-button sc-ivxoEo krxZPo" aria-disabled="false" type="submit">Copy</button><a class="nhsuk-button sc-ivxoEo krxZPo" role="button" aria-disabled="false" draggable="false" href="data:text/xml;charset=utf-8,%7B%0A%20%20%22resourceType%22%3A%20%22OperationOutcome%22%2C%0A%20%20%22meta%22%3A%20%7B%0A%20%20%20%20%22lastUpdated%22%3A%20%222022-10-21T13%3A47%3A00%2B00%3A00%22%0A%20%20%7D%2C%0A%20%20%22issue%22%3A%20%5B%0A%20%20%20%20%7B%0A%20%20%20%20%20%20%22severity%22%3A%20%22fatal%22%2C%0A%20%20%20%20%20%20%22code%22%3A%20%22invalid%22%2C%0A%20%20%20%20%20%20%22diagnostics%22%3A%20%22Some%20error%20message%22%0A%20%20%20%20%7D%0A%20%20%5D%0A%7D" download="message">Download</a></div><pre class="sc-dntaoT cwTwjs">{
  "resourceType": "OperationOutcome",
  "meta": {
    "lastUpdated": "2022-10-21T13:47:00+00:00"
  },
  "issue": [
    {
      "severity": "fatal",
      "code": "invalid",
      "diagnostics": "Some error message"
    }
  ]
}</pre>
    </div>
  </details>
</fieldset>
<div class="sc-egkSDF hcqWyj"><button class="nhsuk-button nhsuk-button--secondary" aria-disabled="false" type="button">Back</button></div>"
`;

exports[`Displays loading text while prescription data is being requested 1`] = `
"<div style="text-align: center;">
  <h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl sc-ghWlax fUgEhG">Loading</label></h1>
  <div class="nhsuk-loader"><span class="nhsuk-loader__spinner"></span><span class="nhsuk-loader__text">Retrieving prescription details.</span></div>
</div>"
`;

exports[`Displays loading text while prescription is being sent 1`] = `
"<div style="text-align: center;">
  <h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl sc-ghWlax fUgEhG">Loading</label></h1>
  <div class="nhsuk-loader"><span class="nhsuk-loader__spinner"></span><span class="nhsuk-loader__text">Sending signature request.</span></div>
</div>"
`;

exports[`Displays prescription summary if prescription details are retrieved successfully 1`] = `
"<form>
  <h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl"><span>Prescription Summary</span>
      <figure class="nhsuk-image"><img class="nhsuk-image__img sc-fAUdSK hfgWJb" id="editPrescription" srcset="baseUrl/static/BlackTie_Bold_full_set_Pencil_SVG_Blue.svg" sizes="50px"></figure>
    </label></h1>
  <div class="sc-egkSDF hcqWyj"><button class="nhsuk-button" aria-disabled="false" type="button">Download this Prescription</button></div>
  <dl class="nhsuk-summary-list">
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">ID</dt>
      <dd class="nhsuk-summary-list__value">B407F7-A99968-4DB2AU</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Prescription Type Code</dt>
      <dd class="nhsuk-summary-list__value">1001</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Course Of Therapy</dt>
      <dd class="nhsuk-summary-list__value">Continuous long term (repeat dispensing)</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Issue Number</dt>
      <dd class="nhsuk-summary-list__value">1 of 6</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Authored On</dt>
      <dd class="nhsuk-summary-list__value">13-Nov-2021</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Effective Date</dt>
      <dd class="nhsuk-summary-list__value">03-Sep-2021</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Nominated Pharmacy ODS Code</dt>
      <dd class="nhsuk-summary-list__value">FER21</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Nominated Pharmacy Type</dt>
      <dd class="nhsuk-summary-list__value">Other (e.g. Community Pharmacy)</dd>
    </div>
  </dl><label class="nhsuk-label nhsuk-label--m">Patient</label>
  <dl class="nhsuk-summary-list">
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Name</dt>
      <dd class="nhsuk-summary-list__value">CORY, ETTA (MISS)</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">NHS Number</dt>
      <dd class="nhsuk-summary-list__value">944 930 5552</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Date of Birth</dt>
      <dd class="nhsuk-summary-list__value">04-Jan-1999</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Gender</dt>
      <dd class="nhsuk-summary-list__value">Female</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Address</dt>
      <dd class="nhsuk-summary-list__value">123 Dale Avenue<br>Long Eaton<br>Nottingham<br>NG10 1NP</dd>
    </div>
  </dl>
  <div class="nhsuk-table__panel-with-heading-tab">
    <h3 class="nhsuk-table__heading-tab">Medication</h3>
    <table class="nhsuk-table">
      <caption class="nhsuk-table__caption">Medication summary</caption>
      <thead class="nhsuk-table__head">
        <tr class="nhsuk-table__row">
          <th class="nhsuk-table__header" scope="col">Details</th>
          <th class="nhsuk-table__header" scope="col">Quantity</th>
          <th class="nhsuk-table__header" scope="col">Unit</th>
          <th class="nhsuk-table__header" scope="col">Dosage Instructions</th>
        </tr>
      </thead>
      <tbody class="nhsuk-table__body">
        <tr class="nhsuk-table__row">
          <td class="nhsuk-table__cell">
            <div><b>Methotrexate 10mg/0.2ml solution for injection pre-filled syringes</b></div>
          </td>
          <td class="nhsuk-table__cell">63</td>
          <td class="nhsuk-table__cell">tablet</td>
          <td class="nhsuk-table__cell">
            <div>10 milligram, Inject, Subcutaneous route, once weekly</div>
          </td>
        </tr>
      </tbody>
    </table>
  </div><label class="nhsuk-label nhsuk-label--m">Prescriber</label>
  <dl class="nhsuk-summary-list">
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Name</dt>
      <dd class="nhsuk-summary-list__value">EDWARDS, Thomas (DR)</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Professional Codes</dt>
      <dd class="nhsuk-summary-list__value">SDS Role Profile ID - 100102238986<br>Spurious Code - 612345<br>SDS User ID - 3415870201<br>GMC Number - 4428981</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Telecom</dt>
      <dd class="nhsuk-summary-list__value">01234567890</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Organization</dt>
      <dd class="nhsuk-summary-list__value">SOMERSET BOWEL CANCER SCREENING CENTRE (A99968)</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Address</dt>
      <dd class="nhsuk-summary-list__value">MUSGROVE PARK HOSPITAL<br>TAUNTON<br>TA1 5DA</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Trust / CCG</dt>
      <dd class="nhsuk-summary-list__value">TAUNTON AND SOMERSET NHS FOUNDATION TRUST (RBA)</dd>
    </div>
  </dl>
  <div class="nhsuk-form-group"><label class="nhsuk-label nhsuk-label--s" id="signingOptions--label" for="signingOptions">Choose a sign in option</label>
    <div class="nhsuk-radios" id="signingOptions" value="N3_SMARTCARD" aria-label="Choose a sign in option">
      <div class="nhsuk-radios__item"><input class="nhsuk-radios__input" id="signingOptions-1" name="signingOptions" aria-labelledby="signingOptions-1--label" type="radio" value="N3_SMARTCARD" checked=""><label class="nhsuk-label nhsuk-radios__label" id="signingOptions-1--label" for="signingOptions-1">N3 Smartcard</label></div>
      <div class="nhsuk-radios__item"><input class="nhsuk-radios__input" id="signingOptions-2" name="signingOptions" aria-labelledby="signingOptions-2--label" type="radio" value="IOS"><label class="nhsuk-label nhsuk-radios__label" id="signingOptions-2--label" for="signingOptions-2">IOS</label></div>
      <div class="nhsuk-radios__item"><input class="nhsuk-radios__input" id="signingOptions-3" name="signingOptions" aria-labelledby="signingOptions-3--label" type="radio" value="FIDO2"><label class="nhsuk-label nhsuk-radios__label" id="signingOptions-3--label" for="signingOptions-3">FIDO2</label></div>
    </div>
  </div>
  <div class="sc-egkSDF hcqWyj"><button class="nhsuk-button" aria-disabled="false" type="submit">Sign &amp; Send</button><button class="nhsuk-button nhsuk-button--secondary" aria-disabled="false" type="button">Back</button></div>
</form>"
`;

exports[`Redirects and displays link if signature request upload is successful 1`] = `
"<h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl">Upload Complete</label></h1><label class="nhsuk-label">Use the link below if you are not redirected automatically.</label>
<div class="nhsuk-action-link"><a class="nhsuk-action-link__link" href="https://example.com/"><svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="36" width="36">
      <path d="M0 0h24v24H0z" fill="none"></path>
      <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
    </svg><span class="nhsuk-action-link__text">Proceed to the Signing Service</span></a></div>"
`;
